--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "execa": "^3.3.0",
     "git-rev-sync": "^1.12.0",
     "inquirer": "^7.0.0",
-    "ora": "^4.0.3",
+    "listr": "^0.14.3",
     "semver": "^6.3.0",
     "staged-git-files": "^1.2.0"
   }
