--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "package.json scripts",
   "main": "index.js",
   "bin": {
-    "pkg-scripts": "src/index.js"
+    "hi-pkg-scripts": "src/index.js"
   },
   "scripts": {
     "release": "node src/index.js -- release"
