--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
   "dependencies": {
     "chalk": "^3.0.0",
     "commander": "^4.0.1",
+    "fs-extra": "^8.1.0",
     "git-rev-sync": "^1.12.0",
     "inquirer": "^7.0.0",
     "listr": "^0.14.3",
     "ora": "^4.0.3",
     "semver": "^6.3.0",
-    "staged-git-files": "^1.2.0"
+    "staged-git-files": "^1.2.0",
+    "strsplit": "^1.0.0"
   }
 }
